keep track of online users in a simple list

--- a/frontend/app.json
+++ b/frontend/app.json
@@ -21,10 +21,16 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.maggedelle.frontend"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "3888235e-341e-4e65-8e0c-0800174e5f94"
+      }
     }
   }
 }
