feature #11: library linking is figured out and a workflow have been created.

--- a/Server/algorithms/CMakeLists.txt
+++ b/Server/algorithms/CMakeLists.txt
@@ -1,9 +1,9 @@
 cmake_minimum_required(VERSION 3.4...3.18)
-project(cmake_example)
+project(profit_maximization)
 
-add_library(courier STATIC utils/courier.cpp)
-set_target_properties(courier PROPERTIES POSITION_INDEPENDENT_CODE ON)
+add_library(profit_module_cpp STATIC utils/courier.cpp utils/profit_wrap.cpp)
+set_target_properties(profit_module_cpp PROPERTIES POSITION_INDEPENDENT_CODE ON)
 
 add_subdirectory(pybind11)
-pybind11_add_module(cmake_example main.cpp)
-target_link_libraries(cmake_example PRIVATE courier)
+pybind11_add_module(profit_module main.cpp)
+target_link_libraries(profit_module PRIVATE profit_module_cpp)
