feature #11: Created interfaces and simple implementations for both courier and order class. Created interface for needed utility functions - haversine distance calculations, to_radians, time giving speed and distance.

--- a/Server/algorithms/CMakeLists.txt
+++ b/Server/algorithms/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.4...3.18)
 project(profit_maximization)
 
-add_library(profit_module_cpp STATIC utils/courier.cpp utils/profit_wrap.cpp)
+add_library(profit_module_cpp STATIC utils/courier.cpp utils/order.cpp utils/profit_wrap.cpp) 
 set_target_properties(profit_module_cpp PROPERTIES POSITION_INDEPENDENT_CODE ON)
 
 add_subdirectory(pybind11)
