feature #11: Implemented get_available_couriers function. Used to get the couriers that are available to reach a order distination. Still need to sort them by how fast they can fullfill the order.

--- a/Server/algorithms/CMakeLists.txt
+++ b/Server/algorithms/CMakeLists.txt
@@ -1,7 +1,10 @@
 cmake_minimum_required(VERSION 3.4...3.18)
 project(profit_maximization)
+set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
 
-add_library(profit_module_cpp STATIC utils/courier.cpp utils/order.cpp utils/utility.cpp utils/profit_wrap.cpp) 
+add_library(profit_module_cpp STATIC utils/courier.cpp utils/order.cpp utils/utility.cpp utils/greedy.cpp utils/profit_wrap.cpp) 
 set_target_properties(profit_module_cpp PROPERTIES POSITION_INDEPENDENT_CODE ON)
 
 add_subdirectory(pybind11)
