--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "@reduxjs/toolkit": "^1.9.3",
     "expo": "~48.0.5",
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.17.2",
@@ -20,10 +21,12 @@
     "react-native-dotenv": "^3.4.8",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
+    "react-redux": "^8.0.5",
     "socket.io-client": "^4.6.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/react-redux": "^7.1.25"
   },
   "private": true
 }
