--- a/Server/algorithms/CMakeLists.txt
+++ b/Server/algorithms/CMakeLists.txt
@@ -5,7 +5,7 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
-add_library(profit_module_cpp STATIC utils/courier.cpp utils/order.cpp utils/utility.cpp utils/approaches.cpp) 
+add_library(profit_module_cpp STATIC utils/courier.cpp utils/order.cpp utils/utility.cpp utils/assignment.cpp utils/approaches.cpp) 
 set_target_properties(profit_module_cpp PROPERTIES POSITION_INDEPENDENT_CODE ON)
 
 add_subdirectory(pybind11)
