--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-native-maps": "^1.4.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
+    "react-native-slider": "^0.11.0",
     "react-redux": "^8.0.5",
     "socket.io-client": "^4.6.1"
   },
